--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,41 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<!-- Navbar -->
+	<nav class="navbar navbar-light bg-light">
+		<a class="navbar-brand" href="#">
+			<img src="img/logo.svg" width="100" height="50" class="d-inline-block align-top" alt="">
+		</a>
+		<form class="form-inline my-2 my-lg-0">
+			<div class="dropdown">
+				<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Тиллар
+				</button>
+				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<a class="dropdown-item" href="#">Lotin</a>
+					<a class="dropdown-item" href="#">Кирил</a>
+					<a class="dropdown-item" href="#">Русский</a>
+				</div>
+			</div>
+		</form>
+	</nav>
+<div class="row">
+	<div class="col-4"></div>
+	<div class="col-4 box tah text-center my-auto">
+		<h3 class="ver_tex">Таҳорат</h3>
+	</div>
+	<div class="col-4"></div>
+</div>
+<div class="row">
+	<div class="col-2"></div>
+	<div class="col-4 box erk text-center my-auto">
+		<h3 class="ver_tex">Эркаклар намози</h3>
+	</div>
+	<div class="col-4 box ayl text-center my-auto">
+		<h3 class="ver_tex">Аёллар намози</h3>
+	</div>
+	<div class="col-2"></div>
+</div>
 
 
 
@@ -33,9 +67,7 @@
 
 
 
-
-
-
-	<script src="js/bootstrap.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
