--- a/src/index.html
+++ b/src/index.html
@@ -10,38 +10,68 @@
 <body>
 	<!-- Navbar -->
 	<nav class="navbar navbar-light bg-light">
-		<a class="navbar-brand" href="#">
+		<a class="navbar-brand logo" href="#">
 			<img src="img/logo.svg" width="100" height="50" class="d-inline-block align-top" alt="">
 		</a>
 		<form class="form-inline my-2 my-lg-0">
-			<div class="dropdown">
-				<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					Тиллар
-				</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<a class="dropdown-item" href="#">Lotin</a>
-					<a class="dropdown-item" href="#">Кирил</a>
-					<a class="dropdown-item" href="#">Русский</a>
-				</div>
+			<div class="lang_button" onclick="location.href='#oz';">
+				O'z
 			</div>
+			<div class="lang_button" onclick="location.href='#uz';">
+				Ўз
+			</div>
+			<div class="lang_button" onclick="location.href='#ru';">
+				Ру
+			</div>
+
 		</form>
 	</nav>
-<div class="row">
-	<div class="col-4"></div>
-	<div class="col-4 box tah text-center my-auto">
-		<h3 class="ver_tex">Таҳорат</h3>
+
+
+<div class="container">
+
+<div class="row line justify-content-center">
+	<!-- <div class="col-4"></div> -->
+	<div class="col-sm-5 col-12 box tah text-center my-auto">
+		<h3>Таҳорат</h3>
 	</div>
-	<div class="col-4"></div>
+	<!-- <div class="col-4"></div> -->
 </div>
-<div class="row">
-	<div class="col-2"></div>
-	<div class="col-4 box erk text-center my-auto">
-		<h3 class="ver_tex">Эркаклар намози</h3>
+<div class="row line justify-content-center">
+	<!-- <div class="col-2"></div> -->
+	<div class="col-sm-4 col-12 box erk text-center my-auto">
+		<h3>Эркаклар<br>намози</h3>
 	</div>
-	<div class="col-4 box ayl text-center my-auto">
-		<h3 class="ver_tex">Аёллар намози</h3>
+	<!-- <div class="col-1"></div> -->
+	<div class="col-sm-4 col-12 box ayl text-center my-auto">
+		<h3>Аёллар<br>намози</h3>
 	</div>
-	<div class="col-2"></div>
+	<!-- <div class="col-2"></div> -->
+</div>
+
+</div>
+
+<div class="container">
+<div class="row justify-content-center line" >
+	<div class="col-12 col-sm-3">
+		<div class="button_sorce">
+			<img src="img/suralar.svg" alt="" class="svg_icon">
+			Суралар
+		</div>
+	</div>
+	<div class="col-12 col-sm-3">
+		<div class="button_sorce">
+			<img src="img/duolar.svg" alt="" class="svg_icon">
+			Дуолар
+		</div>
+	</div>
+	<div class="col-12 col-sm-3">
+		<div class="button_sorce">
+			<img src="img/savollar.svg" alt="" class="svg_icon">
+			Савол-жавоблар
+		</div>
+	</div>
+</div>
 </div>
 
 
@@ -61,9 +91,37 @@
 
 
 
+<!-- <nav class="navbar navbar-expand-sm bg-light navbar-dark fixed-bottom">
+    <span>© islom.uz 2003-2019</span>
+    <span>Дастурни<br>юклаб олинг:</span>
+    <form>
+    <button class="btn btn-outline my-2 my-sm-0" type="submit" formaction="https://www.google.com">
+    	<img src="img/play_market.svg" alt="">
+    </button>
+    <button class="btn btn-outline my-2 my-sm-0" type="submit" formaction="https://www.apple.com">
+    	<img src="img/app_store.svg" alt="">
+    </button>
+    </form>
+</nav> -->
+
+<nav class="navbar navbar-light bg-light fixed-bottom">
+		<span class="footer_margin">© <a href="https://islom.uz/">islom.uz</a> 2003-2021</span>
+		<form class="form-inline my-2 my-lg-0">
+			<span>Дастурни<br>юклаб олинг:</span>
+			<div class="footer_margin shadow_footer">
+    		<button class="btn btn-outline my-2 my-sm-0 " type="submit" formaction="https://www.google.com">
+    			<img src="img/play_market.svg" alt="">
+    		</button>
+    		</div>
+    		<div class="footer_margin shadow_footer">
+   			<button class="btn btn-outline my-2 my-sm-0" type="submit" formaction="https://www.apple.com">
+    			<img src="img/app_store.svg" alt="">
+		    </button>
+		    </div>
 
 
-
+		</form>
+	</nav>
 
 
 
