Second page main file

--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,14 @@
 			<img src="img/logo.svg" width="100" height="50" class="d-inline-block align-top" alt="">
 		</a>
 		<form class="form-inline my-2 my-lg-0">
-			<div class="lang_button" onclick="location.href='#oz';">
-				O'z
+			<div class="lang_button text-center" onclick="location.href='#oz';">
+				<span class="align-middle">O'z</span>
 			</div>
-			<div class="lang_button" onclick="location.href='#uz';">
-				Ўз
+			<div class="lang_button text-center" onclick="location.href='#uz';">
+				<span class="align-middle">Ўз</span>
 			</div>
-			<div class="lang_button" onclick="location.href='#ru';">
-				Ру
+			<div class="lang_button text-center" onclick="location.href='#ru';">
+				<span class="align-middle">Ру</span>
 			</div>
 
 		</form>
@@ -32,9 +32,13 @@
 
 <div class="row line justify-content-center">
 	<!-- <div class="col-4"></div> -->
+	
 	<div class="col-sm-5 col-12 box tah text-center my-auto">
-		<h3>Таҳорат</h3>
+		<a href="tahorat/main.html" class="block-link">
+			<h3>Таҳорат</h3>
+		</a>
 	</div>
+	
 	<!-- <div class="col-4"></div> -->
 </div>
 <div class="row line justify-content-center">
@@ -91,18 +95,7 @@
 
 
 
-<!-- <nav class="navbar navbar-expand-sm bg-light navbar-dark fixed-bottom">
-    <span>© islom.uz 2003-2019</span>
-    <span>Дастурни<br>юклаб олинг:</span>
-    <form>
-    <button class="btn btn-outline my-2 my-sm-0" type="submit" formaction="https://www.google.com">
-    	<img src="img/play_market.svg" alt="">
-    </button>
-    <button class="btn btn-outline my-2 my-sm-0" type="submit" formaction="https://www.apple.com">
-    	<img src="img/app_store.svg" alt="">
-    </button>
-    </form>
-</nav> -->
+
 
 <nav class="navbar navbar-light bg-light fixed-bottom">
 		<span class="footer_margin">© <a href="https://islom.uz/">islom.uz</a> 2003-2021</span>
