first complite version

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
 	<!-- <div class="col-4"></div> -->
 	
 	<div class="col-sm-5 col-12 box tah text-center my-auto">
-		<a href="tahorat/main.html" class="block-link">
+		<a href="steps/main.html" class="block-link">
 			<h3>Таҳорат</h3>
 		</a>
 	</div>
