--- a/src/steps/main.html
+++ b/src/steps/main.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="../css/bootstrap.css">
 </head>
 <body>
-	<div class="section head">
+	<div class="section head tah">
 		<div class="container">
 			<div class="row ">
 				<div class="col-md-2 offset-md-5 block-link">
@@ -34,7 +34,8 @@
 			<div class="row">
 				<!-- List of steps -->
 				<div class="col-md-3 steps_block">
-					<div class="steps">
+					<div class="steps">  
+						<!-- If you add "step-active" to any button it will be outlined to blue color -->
 						<button class="step_button">
 							<span>
 								Ният
@@ -115,6 +116,16 @@
 			</div>
 		</div>
 	</div>
+
+	<section class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-2 footer-button back_button"><a href="../index.html"> < Бош саҳифа </a></div>
+				<div class="col-md-3 offset-md-4 footer-button men"><a href="mens.html"> <img src="../img/men.svg" alt=" ">Эркаклар намози > </a></div>
+				<div class="col-md-3 footer-button women"><a href="womens.html"> <img src="../img/women.svg" alt="">Аёллар намози > </a></div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
 
